[workspace]
resolver = "2"
members = ["programs/*", "cli-rust", "unstake-lib", "unstake_interface"]

[workspace.dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
base64 = "0.21.2"
clap = { version = "^4.0" }
clap2 = { package = "clap", version = "^2.0" }
borsh = "^0.10"
derive_more = "^0.99"
mpl-token-metadata = "^1"
num-derive = ">=0.1"
num-traits = ">=0.1"
proptest = "^1"
serde = "^1"
serde_json = "^1"
spl-associated-token-account = "^1.1" # required for anchor-spl token
spl-token = "^3.0"
spl-math = ">=0.1"
thiserror = "^1"

# solana deps
# Lock to 1.14.20 for prod, but ^1 for flexibility for library users
solana-account-decoder = "^1,<2"
solana-clap-utils = "^1,<2"
solana-cli-config = "^1,<2"
solana-client = "^1,<2"
solana-sdk = "^1,<2"
solana-program = "=1.18.25"
solana-stake-program = "^1,<2"

# workspace members
unstake = { path = "./programs/unstake" }
unstake-lib = { path = "./unstake-lib" }
unstake_interface = { path = "./unstake_interface" }
